<resources>
    <string name="app_name">GrowMe</string>
    <string name="tab_main">Main</string>
    <string name="btn_binary_text">Test binary tree</string>
    <string name="btn_send_msg">Test send msg</string>
    <string name="btn_msg_quit">Test msg quit</string>
    <string name="btn_anim">Test anim</string>
    <string name="btn_seek_bar">Test SeekBar</string>
    <string name="common_add">Add</string>
    <string name="common_remove">Remove</string>
    <string name="test_detach_list">test detach list</string>
    <string name="test_code">test code</string>
    <string name="test_list_detach">test list detach</string>
    <string name="test_menu">test menu</string>
    <string name="test_perform_2">test perform 2</string>
    <string name="test_perform_1">test perform 1</string>

    <string name="test_intent">test_intent</string>
    <string name="intent_open_url">test open url</string>
    <string name="intent_open_tel">intent open tel</string>
    <string name="intent_btn_3">intent btn 3</string>
</resources>
