<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/common_20"
    android:paddingBottom="@dimen/common_20">

    <Button
        android:id="@+id/intent_btn1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_60"
        android:text="@string/intent_open_url"
        android:textColor="@color/black"
        android:textSize="@dimen/common_text_size_15sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/intent_btn2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_60"
        android:layout_marginTop="@dimen/common_10"
        android:text="@string/intent_open_tel"
        android:textSize="@dimen/common_text_size_15sp"
        app:layout_constraintTop_toBottomOf="@+id/intent_btn1" />

    <Button
        android:id="@+id/intent_btn3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_60"
        android:layout_marginTop="@dimen/common_10"
        android:text="@string/test_perform_2"
        android:textSize="@dimen/common_text_size_15sp"
        app:layout_constraintTop_toBottomOf="@+id/intent_btn2" />


</android.support.constraint.ConstraintLayout>