<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/common_10"
    android:paddingBottom="@dimen/common_10">

    <TextView
        android:id="@+id/tv_test_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ff0000"
        android:textSize="@dimen/common_text_size_18sp" />

    <Button
        android:id="@+id/btn_binary_tree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_binary_text"
        android:textColor="@color/black"
        android:textSize="@dimen/common_text_size_14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_test_question" />

    <Button
        android:id="@+id/btn_send_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_send_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/common_text_size_14sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_binary_tree" />

    <Button
        android:id="@+id/btn_msg_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_msg_quit"
        android:textColor="@color/black"
        android:textSize="@dimen/common_text_size_14sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_msg" />

</android.support.constraint.ConstraintLayout>